--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
    "background": {
-      "persistent": false,
-      "scripts": [ "defaults.js", "bg.js" ]
+      "service_worker": "bg.js",
+      "type": "module"
    },
-   "browser_action": {
+   "action": {
    },
    "description": "Quickly copy a URL, with your desired tracking parameter appended.",
    "icons": {
@@ -12,10 +12,9 @@
       "48": "icon/learnAppenderIcon48.png",
       "128": "icon/learnAppenderIcon128.png"
    },
-   "manifest_version": 2,
+   "manifest_version": 3,
    "name": "Learn URL Appender",
    "options_ui": {
-      "chrome_style": true,
       "page": "options.html"
    },
    "permissions": [ "activeTab", "clipboardWrite", "contextMenus", "storage" ],
